# ai-gameplay-bot

./: .env.example  .gitignore  API.md  LICENSE  Makefile  README.md  SETUP.md  config.py  logger_config.py  pyproject.toml  requirements.txt  setup.sh  test_installation.py
data/: README.md
data/raw/annotations/: actions.txt
deployment/: control_backend.py  deploy_nn.py  deploy_transformer.py  feature_extractor.py  real_time_controller.py  stream_sessions.py
evaluation/: feedback_iteration.py  model_comparison.py  real_time_tests.py
frontend/: index.html
models/neural_network/: nn_finetune.py  nn_model.py  nn_rl_integration.py  nn_training.py
models/transformer/: transformer_finetune.py  transformer_model.py  transformer_rl_integration.py  transformer_training.py
notebooks/: data_analysis.ipynb  evaluation_results.ipynb
scripts/: dataset_builder.py  generate_sample_data.py  generative_ai_enrichment.py  input_mapping.py  smoke_e2e.py  smoke_frontend_api.py  video_processing.py
tests/: __init__.py  test_deployment_api.py  test_input_mapping.py  test_nn_model.py  test_video_processing.py
