[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gameplay-bot"
version = "0.1.0"
description = "AI Gameplay Bot - Neural Network + Transformer gameplay automation services"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }

dependencies = [
  # Deep Learning
  "torch==2.0.1",
  "torchvision==0.15.2",
  "transformers==4.30.2",
  "numpy==1.24.3",

  # Computer Vision
  "opencv-python==4.8.0.74",
  "Pillow==10.0.0",

  # Data Processing
  "pandas==2.0.3",
  "scikit-learn==1.3.0",
  "scipy==1.11.1",

  # Web/API
  "Flask==2.3.2",
  "Flask-CORS==4.0.0",
  "requests==2.31.0",
  "gunicorn==21.2.0",

  # RL (note: gym is deprecated; keep for compatibility unless you migrate code)
  "gym==0.26.2",
  "stable-baselines3==2.0.0",

  # Utilities
  "python-dotenv==1.0.0",
  "tqdm==4.65.0",
  "pyyaml==6.0.1",
  "colorama==0.4.6",

  # Monitoring
  "prometheus-client==0.17.1",
  "psutil==5.9.5",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.0",
  "pytest-cov==4.1.0",
  "pytest-mock==3.11.1",
  "pytest-asyncio==0.21.1",

  "black==23.7.0",
  "flake8==6.0.0",
  "pylint==2.17.4",
  "mypy==1.4.1",
]

[tool.uv]
# keep uv behavior predictable for apps (not packaging/publishing)
package = false

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
